test/expressions/bradc/reduceVsMathPrec2.good
reduceVsMathPrec2.chpl:12: error: type mismatch in assignment from array to int(64)
